--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,6 @@
 .main-header {
   background: url(../img/header-bg.jpg) no-repeat;
   background-size: cover;
-  z-index: -1;
 }
 header {
   position: relative;
@@ -14,7 +13,6 @@ header::before {
   height: 100%;
   left: 0;
   top: 0;
-  z-index: -1;
 }
 .container-intro {
   display: grid;
@@ -33,7 +31,7 @@ header::before {
   margin-top: 170px;
   box-shadow: 0 0 10px -3px #2e3d42;
   text-align: center;
-  max-width: 350px;
+  z-index: 1000;
 }
 .foto-pessoal img {
   max-width: 100%;
@@ -59,6 +57,7 @@ header::before {
   padding-left: 30px;
   padding-right: 0;
   margin-top: 150px;
+  z-index: 1000;
 }
 .resumo h2 {
   line-height: 1.4;
@@ -74,17 +73,28 @@ header::before {
   padding: 6px 12px;
   margin-bottom: 0;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   text-align: center;
   white-space: nowrap;
-
-  width: 200px;
+  width: 250px;
   color: #fff;
   border: 1px solid #fff;
   border-radius: 0;
   line-height: 3.3;
   text-transform: uppercase;
   cursor: pointer;
+}
+.resumo a:hover {
+  background: #fff;
+  color: #333;
+  transition: 0.5s;
+}
+.detalhe {
+  margin-right: 10px;
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
 }
 .ola {
   background-color: #333;
@@ -93,4 +103,38 @@ header::before {
   width: 134px;
   padding: 25px 0;
   margin: 50px 0 50px 0;
+}
+.container1 {
+  display: flex;
+  height: 150px;
+  width: 50ch;
+}
+.containe1 h1 {
+  font-size: 3rem;
+  padding: 0.5rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-align: center;
+  overflow: hidden;
+}
+.container1 h1 span.typed-text {
+  font-weight: bold;
+  color: #fff;
+}
+.container1 h1 span.cursor {
+  display: inline-block;
+  background-color: #ccc;
+  margin-left: 0.1rem;
+  width: 3px;
+  animation: blink 1s infinite;
+}
+.container1 h1 span.cursor.typing {
+  animation: none;
+}
+@keyframes blink {
+  0%  { background-color: #ccc; }
+  49% { background-color: #ccc; }
+  50% { background-color: transparent; }
+  99% { background-color: transparent; }
+  100%  { background-color: #ccc; }
 }
