--- a/css/nav.css
+++ b/css/nav.css
@@ -4,7 +4,7 @@
   align-items: center;
 }
 .navbar-default {
-  padding: 30px 30px 0 80px;
+  padding: 30px 80px 0 80px;
   border: none;
   position: fixed;
   top: 0;
@@ -18,6 +18,7 @@
 
 .menu-nav a {
   padding: 10px;
+  text-transform: uppercase;
 }
 .home-nav::before {
   content: "";
@@ -30,9 +31,9 @@
 }
 .home-nav {
   border: 1px solid #fff;
-  width: 90px;
-  height: 11px;
-  padding: 9px 10px;
+  width: 100px;
+  height: 25px;
+  padding: 9px 20px;
   line-height: 11px;
   margin-left: 15px !important;
   position: relative;
@@ -40,7 +41,12 @@
   background: url(../img/logo.png) no-repeat 10px 50%;
 }
 .home-nav a{
-box-sizing: border-box;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 7px 15px;
+  position: absolute;
+  left: -2px;
+  top: -1px;
 }
 
 .menu-nav a {
