--- a/css/nav.css
+++ b/css/nav.css
@@ -73,3 +73,11 @@
   background: white;
   margin-top: 4px;
 }
+.navbar-default.sticky{
+  background: radial-gradient(circle, rgba(198,233,255,1) 0%, rgba(173,173,173,1) 0%, rgba(168,187,198,1) 47%, rgba(57,57,57,1) 100%);
+  padding-bottom: 10px;
+  padding-top: 20px;
+  transition: 0.6s;
+  box-shadow: 0 0 10px -3px #2e3d42;
+  z-index: 100000;
+}
