--- a/css/header.css
+++ b/css/header.css
@@ -132,11 +132,89 @@ header::before {
   animation: none;
 }
 @keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
-  50% { background-color: transparent; }
-  99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
+  0% {
+    background-color: #ccc;
+  }
+  49% {
+    background-color: #ccc;
+  }
+  50% {
+    background-color: transparent;
+  }
+  99% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: #ccc;
+  }
 }
 
+@media (max-width: 870px) {
+  .container-intro {
+    grid-template-columns: 1fr;
+  }
+  .resumo {
+    margin-top: 0px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .resumo h2 {
+    display: none;
+  }
+  .foto-pessoal {
+    max-width:70% ;
+    margin: 0 auto;
+    margin-top: 120px;
+    margin-bottom: 20px;
+  }
+  
+  .container1{
+  margin: 0 auto;
+  
+  }
+  
+}
+@media (max-width: 600px){
+  
+  .resumo{
+    display: flex;
+    flex-direction: column;
+   align-items: center; 
+   max-width: 300px;
+   margin: 0 auto;
+   margin-bottom: 30px;
+  }
+.foto-pessoal h1{
+  font-size: 21px;
+}
+.container1{
+  max-width: 300px;
+}
+.container1 h1{
+  font-size: 1.5rem;
+  max-width: 18ch;
+  text-align: center;
+  margin: 0 auto;
+}
+.resumo p{
+  font-size: 1rem;
+  text-align: center;
+}
+}
 
+@media (max-width: 400px){
+  .foto-pessoal p{
+    font-size: 0.7rem;
+    padding: 2px;
+  }
+  .foto-pessoal h1{
+    font-size: 1rem;
+  }
+  .resumo{
+    max-width: 200px;
+  }
+  .container1{
+    max-width: 200px;
+  }
+
+}
