--- a/css/nav.css
+++ b/css/nav.css
@@ -4,14 +4,13 @@
   align-items: center;
 }
 .navbar-default {
-  padding: 30px 80px 0 80px;
+  padding: 20px 80px 0 80px;
   border: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background: transparent;
-  z-index: 9;
+  z-index: 22229;
   color: #fff;
   box-sizing: border-box;
 }
@@ -74,9 +73,8 @@
   margin-top: 4px;
 }
 .navbar-default.sticky{
-  background: radial-gradient(circle, rgba(198,233,255,1) 0%, rgba(173,173,173,1) 0%, rgba(168,187,198,1) 47%, rgba(57,57,57,1) 100%);
+  background: #333;
   padding-bottom: 10px;
-  padding-top: 20px;
   transition: 0.6s;
   box-shadow: 0 0 10px -3px #2e3d42;
   z-index: 100000;
