--- a/css/projetos.css
+++ b/css/projetos.css
@@ -1,4 +1,4 @@
-.projetos-bg{
+.projetos-bg {
   background: #8d979b;
 }
 
@@ -19,13 +19,11 @@
   width: 80vw;
   max-width: 800px;
   margin: 0 20px;
-
   border-radius: 4px;
   overflow: hidden;
-  box-shadow: 0 0px 1px rgba(0,0,0,.4);
-  opacity: .8;
-  transform: scale(.8);
-  transition: .4s;
+  opacity: 0.8;
+  transform: scale(0.8);
+  transition: 0.4s;
 }
 
 .slide li.active {
@@ -43,15 +41,16 @@
   display: block;
   width: 12px;
   height: 12px;
-  background: #FB5;
+  background: #fb5;
   border-radius: 50%;
   overflow: hidden;
   text-indent: -999px;
   margin: 5px;
 }
 
-[data-control="slide"] li.active a, [data-control="slide"] li a:hover {
-  background: #E54;
+[data-control="slide"] li.active a,
+[data-control="slide"] li a:hover {
+  background: #e54;
 }
 
 .custom-controls {
@@ -63,15 +62,15 @@
 }
 
 .custom-controls li {
-  opacity: .8;
-  transform: scale(.8);
+  opacity: 0.8;
+  transform: scale(0.8);
   width: 40px;
   height: 40px;
   border-radius: 50%;
   overflow: hidden;
   margin: 2px;
-  box-shadow: 0 2px 2px rgba(0,0,0,.5);
-  transition: .3s;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
   text-align: center;
   font-size: 30px;
   color: white;
@@ -96,22 +95,66 @@
   color: white;
   width: 40px;
   height: 40px;
-  background: #ecf1f4 url('../img/projetos/arrow.svg') center center no-repeat;
+  background: #ecf1f4 url("../img/projetos/arrow.svg") center center no-repeat;
 }
 
 .arrow-nav button.prev {
   transform: rotate(-180deg);
 }
-.slide li{
+.slide li {
   text-align: center;
   font-size: 20px;
-  
   color: white;
 }
-.slide li a{
+.projeto-item {
+  text-align: center;
+  flex-shrink: 0;
+  max-width: 770px;
+  width: 90vw;
+  color: white;
+  margin: 0.9375rem;
+  transition: 0.3s;
+}
+.projeto-item h2 {
+  font-size: 1.5rem;
+  line-height: 1.2;
+  font-weight: normal;
+  margin-top: 0.9375rem;
+  margin-bottom: 0.3125rem;
+}
+.projeto-item p {
+  width: 60ch;
+  font-size: 1rem;
+  line-height: 1.55;
+  letter-spacing: -0.01rem;
+  font-style: italic;
+  max-width: 600px;
+  margin: 0 auto;
+  line-height: 1.6;
+}
+.projeto-item a {
   color: black;
   padding: 5px;
-  background: white;
+}
+
+.projeto-img {
   display: block;
-  font-size: 16px;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0 4px 4px 0 rgb(0 0 0 / 50%);
+}
+@media (max-width: 600px) {
+  .projeto-item p {
+    font-size: 0.85rem;
+  }
+}
+@media (max-width: 500px){
+  .projeto-item p{
+    width: 40ch;
+  }
+}
+@media (max-width: 340px){
+  .projeto-item p{
+    width: 35ch;
+  }
 }
