--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,4 @@
 @import url("./habilidades.css");
 @import url("./menu-mobile.css");
 @import url("./projetos.css");
+@import url("./experiencia.css");
