--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,5 @@
 @import url("./menu-mobile.css");
 @import url("./projetos.css");
 @import url("./experiencia.css");
+@import url("./informacoes.css");
+
