--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -6,7 +6,7 @@
     padding: 0 40px;
     margin: 0 auto;
     position: relative;
-    padding-top: 100px;
+    padding-top: 70px;
   }
 
 
@@ -225,4 +225,7 @@
 }
 .preto{
   color: black !important;
+}
+.exp-te{
+  padding-bottom: 550px;
 }
