--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,5 @@
 @import url("./projetos.css");
 @import url("./experiencia.css");
 @import url("./informacoes.css");
+@import url("./formacao.css");
 
