--- a/css/formacao.css
+++ b/css/formacao.css
@@ -1,6 +1,6 @@
 .formacao {
   position: relative;
-  background:#8d979b ;
+  background: #8d979b;
 }
 .formacao-container {
   display: grid;
@@ -22,7 +22,7 @@
 }
 .formacao-container .subtitulo {
   max-width: 5ch;
-  color:white;
+  color: white;
 }
 .formacao-texto {
   margin-bottom: 60px;
@@ -105,6 +105,12 @@
 }
 .curso h3::before {
   background: url(../img/formacao/cursos.svg) no-repeat center center;
+  margin-top: 10px;
+}
+.curso p {
+  padding-bottom: 20px;
+  color: #333;
+  max-width: 60ch;
 }
 
 .formacao-extra li {
@@ -184,5 +190,40 @@
 @media (max-width: 350px) {
   .formacao-container .subtitulo {
     font-size: 3rem;
+  }
+}
+.curso h3{
+  font-size: 1.5em;
+  padding-bottom: 30px;
+}
+.js-accordion li {
+  cursor: pointer;
+}
+.js-accordion p {
+  display: none;
+  position: relative;
+}
+
+.js-accordion li span::after {
+  content: "⮟";
+  margin-left: 10px;
+}
+.js-accordion li.ativo span::after {
+  content: "⮝";
+  margin-left: 10px;
+}
+.js-accordion p.ativo {
+  display: block;
+  animation: slideDown 0.8s forwards;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    max-height: 250px;
+    opacity: 1;
   }
 }
