--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,5 @@
 @import url("./experiencia.css");
 @import url("./informacoes.css");
 @import url("./formacao.css");
+@import url("./contato.css")
 
