--- a/css/contato.css
+++ b/css/contato.css
@@ -43,6 +43,7 @@
   display: block;
   width: 100%;
   background-color: #f7f7f7;
+  padding: 12px;
 }
 .diplay-form button {
   cursor: pointer;
@@ -99,4 +100,56 @@ margin-bottom: 20px;
 }
 .fa-github-square:hover{
   color: black;
+}
+
+@media (max-width: 1300px){
+  .container-contato{
+    margin: 20px;
+  }
+}
+@media (max-width: 1100px){
+  .container-contato{
+    grid-template-columns: 1fr;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+.mapa{
+  grid-row: 3;
+}
+.mapa iframe{
+  width: 100%;
+}
+.inform-contato{
+  text-align: start;
+  padding-left: 20px;
+  border-top: 1px solid #f7f7f7;
+}
+.container-contato {
+  margin-bottom: 50px;
+}
+.titulo-contato{
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.lista-midia{
+  justify-content: start;
+}
+}
+@media (max-width: 560px){
+  .container-contato{
+    margin: 20px;
+  }
+  .titulo-contato{
+    padding-bottom: 10px;
+    padding-top: 30px;
+
+  }
+}
+@media (max-width: 360px){
+  .titulo-contato h1{
+    font-size: 25px;
+  }
+  .titulo-contato p{
+    font-size: 20px;
+  }
 }
