--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -1,231 +1,107 @@
-.wrap {
-    color: #333;
-    font-size: 14px;
-    line-height: 21px;
-    max-width: 1200px;
-    padding: 0 40px;
-    margin: 0 auto;
-    position: relative;
-    padding-top: 70px;
-  }
-
-
-  .btn-blauw{background-color: #1C69D4; color: white;}
-  .btn-btn-oranje {background-color: #ed9300; color: white;}  
-  .timeline-wrap{position:relative; padding:0 50px;}
-  .timeline{
-    justify-content: center;
-    overflow-x:auto;
-    -webkit-overflow-scrolling: touch;
-    background-repeat: repeat-x;
-    background-size: 10px 2px;
-    background-position: center top 60%;
-    background-image: -webkit-gradient(linear,left top,right top,color-stop(66%,#000),color-stop(0,transparent));
-    background-image: linear-gradient(90deg,#000 66%,transparent 0);
-    padding: 50px 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 1 100%;
-    -ms-flex: 1 1 100%;
-    flex: 1 1 100%;
-    flex-flow: row nowrap;
-    transition: height .2s ease-out;
-    transition: height .2s ease-out;
-    transition: height .2s ease-out;
-  }
-  .timeline-title, .timeline-content-title{font-weight:600;}
-  .timeline-item{
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display:flex;
-    justify-content: space-between;
-    flex-flow:wrap;
-    -webkit-transition: max-width .2s,-webkit-transform .4s ease-out;
-    transition: max-width .2s,-webkit-transform .4s ease-out;
-    transition: max-width .2s,transform .4s ease-out;
-    transition: max-width .2s,transform .4s ease-out,-webkit-transform .4s ease-out;
-    cursor: pointer;
-    margin:0 50px; 
-    height:auto;
-
-  }
-  .i-is-active.timeline-item{cursor:default;}
-  .timeline-content{width:100%;}
-  .p-timeline-item:hover{transform:scale(1.1); transition:transform .3s ease;}
-  .bmw:hover time, .bmw.i-is-active time, .timeline-content-title.bmw{color:#8d979b;}
-  .mini:hover time, .mini.i-is-active time, .timeline-content-title.mini{color:#8d979b;}
-  .bmw:hover time, .mini:hover time, .bmw time, .mini time{transition:color .3s ease;}
-  .p-timeline-item.i-is-active{cursor: default;}
-  .bmw:hover .p-timeline-block{background-color:#333;}
-  .mini:hover .p-timeline-block{background-color:#333;}
-  .bmw .p-timeline-block, .mini .p-timeline-block, .mini:hover .p-timeline-block, .bmw:hover .p-timeline-block {transition:background-color 1s ease;}
-  .p-timeline-date, .p-timeline-carmodel, .p-timeline-block{width:100%;}
-  .p-timeline-date{font-weight:600;font-size:20px;}
-  .p-timeline-carmodel{margin-top: 5px;margin-bottom: 10px;}
-  .p-timeline-block {
-    min-width:55px;
-    min-height:55px;
-    max-width:55px;
-    max-height:55px;
-    border: solid 2px #333;
-    border-radius:50%;
-    background-color:#beac95;
-    position:relative;
-    top:3px;
-    left:48px;
-    margin-bottom:20px;
-  }
-
-  .p-timeline-item{
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap:wrap;
-    min-width:150px;
-    max-width:150px;
-    position: relative;
-    text-align:center;
-    transition:color .3s ease-in-out;
-    transition:transform .3s ease;
-  }
-  .p-timeline-content{
-    width:98%;
-    height:0;
-    position:absolute;
-    overflow:hidden;
-    visibility:hidden;
-    opacity: 0;
-    transform:translateX(-1000px);
-    -webkit-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;
-    padding: 50px 20px 20px 20px;
-    margin-bottom: 70px;
-  }
-  .i-is-active.p-timeline-content{
-    color: #8d979b;
-    height:auto;
-    padding: 50px 20px 20px 20px;
-    float:left;
-    width:98%;
-    text-align:left;
-    position:relative;
-    visibility: visible;
-    opacity:1;
-    transform:translateX(0px);
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-  }
-  .i-is-active.p-timeline-content h3, .i-is-active.p-timeline-content time{width:100%; color: black;}
-  .i-is-active.p-timeline-content .timeline-content-card{width:40%;}
-  .i-is-active.p-timeline-content .timeline-content-image{width:59%;}
-  .i-is-active.p-timeline-content .timeline-content-card, .i-is-active.p-timeline-content .timeline-content-image{float:left;}
-  .i-is-active.p-timeline-content .timeline-content-image:after{clear:both;}
-  .i-is-active.bmw .p-timeline-block{background-color:white;} 
-  .i-is-active.mini .p-timeline-block{background-color:white;} 
-  .i-is-active.p-timeline-item:hover{transform: none;}
-  .i-is-active .p-timeline-item{transform:scale(1.1);}
-  .bmw.i-is-active.p-timeline-content h3 {color:#333;}
-  .mini.i-is-active.p-timeline-content h3 {color:#ed9300;}
-  .timeline-content-image img{width:100%; height:auto; max-width:100%;}
-  .p-timeline-content time {font-size: 15px; line-height: 40px; font-style: italic; }
-  .p-timeline-content p {font-size:14px; line-height:21px; padding-right:30px; font-weight:300;}
-  .timeline-content-title{font-size:28px;}
-  .close {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 32px;
-  height: 32px;
-  opacity: 0.7;
+.container-principal {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.animais-lista {
+  height: 560px;
+  overflow-y: scroll;
+}
+.animais-lista li {
   cursor: pointer;
 }
-.close:hover {opacity: 1;}
-.close:before, .close:after {
-  position: absolute;
-  left: 15px;
-  content: ' ';
-  height: 25px;
-  width: 2px;
-  background-color: #333;
-}
-.close:before {transform: rotate(45deg);}
-.close:after {transform: rotate(-45deg);}
 
-/*Custom scrollbar styling*/
-.timeline::-webkit-scrollbar {height:8px;}
-.timeline::-webkit-scrollbar-track {box-shadow: inset 0 0 5px lightgrey; border-radius: 10px;} /* Track */
-.timeline::-webkit-scrollbar-thumb {background: #beac95; border-radius: 10px;} /* Handle */
-
-/*  ========== Media Queries ========== */
-
-/* laptop resolutions*/
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) { 
-  .timeline{background-position: center top 60%;}
-  .i-is-active.p-timeline-content .timeline-content-card{width:48%;}
-  .i-is-active.p-timeline-content .timeline-content-image{width:50%;}
+.animais-lista::-webkit-scrollbar {
+  width: 10px;
 }
-/*Tablet - Landscape*/
-@media screen and (max-width: 1199px){
-  .timeline-content-title{font-size: 1.7em;}
-  .p-timeline-content time{font-size:1em;}
+.animais-lista::-webkit-scrollbar-thumb {
+  background: #999;
+  border-left: 2px solid #faf6ed;
+  border-right: 2px solid #faf6ed;
 }
-/*Tablet - Portrait*/
-@media screen and (max-width: 1020px){
-  .p-timeline-carmodel{margin:0;}
-   .wrap{padding:0 40px;} 
-  .timeline-wrap{padding:0;}
-  .p-timeline-content{display:flex;flex-flow: column;}
-  .i-is-active.p-timeline-content .timeline-content-card, .i-is-active.p-timeline-content .timeline-content-card, .i-is-active.p-timeline-content .timeline-content-image{width:100%;}
-  .i-is-active.p-timeline-content .timeline-content-image{padding:0; order:0; margin-bottom:20px;}
-  .i-is-active.p-timeline-content .timeline-content-card{padding:0; order:1;}
-  .i-is-active.p-timeline-content{padding-left:0; padding-right:0;}
-  .timeline-content-button{width:100%; padding:10px 0px;} 
-  
+.animais-lista::-webkit-scrollbar-track {
+  background: #fff;
 }
-/* Mobile devices */
-@media screen and (max-width: 768px){
-  body{padding:0;} 
-  .timeline{background-position: center top 55%;}
-  .timeline-item{margin:0 10px;}
-  .p-timeline-block{min-width: 45px; min-height: 45px; max-width: 45px; max-height: 45px;}
-  .p-timeline-date{font-size:16px;}
-  .p-timeline-carmodel{margin:0; line-height:20px; font-size: 13px;}
-  .p-timeline-content time{line-height:20px;}
-  .p-timeline-content p{font-size:0.9em; padding-right:0px;}
-  .timeline-content-title{font-size:1.5em; line-height:1.3em;}
-  .close{right:0px;}
-  .timeline-title{line-height:1em; font-size:1.5em;}
-  .timeline::-webkit-scrollbar {height:4px;}
+.container-exp {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  padding-bottom: 150px;
 }
-
-.timeline-title{
-  text-align: center;
-  margin-bottom: 30px;
+.timeline-title {
   font-size: 35px;
- padding-top: 40px;
+  color: #333;
 }
-.sub-timeline-title{
-  text-align: center;
+.sub-timeline-title {
   font-size: 25px;
-  margin-bottom: 50px;
   color: #8d979b;
+  padding-bottom: 100px;
+}
+.text-align-xp {
+  text-align: center;
+  padding-top: 80px;
+}
+.animais-descricao {
+  padding-left: 50px;
+}
+.animais-descricao h2 {
+  color: #333;
+}
+.animais-descricao p {
+  padding-bottom: 20px;
+}
 
+.js-tabcontent section {
+  display: none;
 }
-.p-timeline-block{
-  background: #333;
+.js-tabcontent section.ativo {
+  display: block !important;
+  animation: show 0.5s forwards;
 }
-.preto{
-  color: black !important;
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
-.exp-te{
-  padding-bottom: 550px;
+@media (max-width: 840px) {
+  .container-exp {
+    padding: 10px;
+    grid-template-columns: 200px 1fr;
+  }
+}
+@media (max-width: 840px) {
+  .container-exp {
+    grid-template-columns: 100px 1fr;
+  }
+}
+
+@media (max-width: 600px) {
+  .timeline-title {
+    font-size: 30px;
+    color: #333;
+  }
+  .sub-timeline-title {
+    font-size: 20px;
+  }
+}
+@media (max-width: 500px){
+  .animais-descricao {
+    padding-left: 10px;
+  }
+ .text-align-xp{
+   padding-top: 30px;
+ }
+  .sub-timeline-title {
+   padding-bottom: 30px;
+  }
+  .animais-lista{
+    height: 470px;
+  }
+}
+.js-tabmenu li.ativo{
+  border: 5px solid #8d979b;
 }
