--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,6 @@
 @import url("./experiencia.css");
 @import url("./informacoes.css");
 @import url("./formacao.css");
-@import url("./contato.css")
+@import url("./contato.css");
+@import url("./footer.css");
 
