--- a/css/nav.css
+++ b/css/nav.css
@@ -39,7 +39,7 @@
   text-indent: 35px;
   background: url(../img/logo.png) no-repeat 10px 50%;
 }
-.home-nav a{
+.home-nav a {
   font-size: 16px;
   font-weight: 400;
   padding: 7px 15px;
@@ -72,10 +72,22 @@
   background: white;
   margin-top: 4px;
 }
-.navbar-default.sticky{
+.navbar-default.sticky {
   background: #333;
   padding-bottom: 10px;
   transition: 0.6s;
   box-shadow: 0 0 10px -3px #2e3d42;
   z-index: 100000;
+}
+
+.js-scroll-animado {
+  opacity: 0;
+  transform: translate3d(-30px, 0, 0);
+  transition: 0.5s;
+
+}
+.js-scroll-animado.ativo {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+
 }
